add metrices and minor bug fixes
